[package]
name = "token"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "token"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []

[dependencies]
anchor-lang = "=0.28.0"
anchor-spl = { version = "=0.28.0", features = ["metadata"] }
mpl-token-metadata = "=1.12.0"
solana-program = "=1.16.0"
